<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".BookingActivity"
    tools:layout_editor_absoluteY="81dp">

    <EditText
        android:id="@+id/editText_pick_up"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="44dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="45dp"
        android:autofillHints=""
        android:ems="10"
        android:inputType="textPostalAddress"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textView3"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:layout_marginTop="16dp"
        android:text="@string/pick_up"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:layout_marginTop="40dp"
        android:layout_marginBottom="39dp"
        android:text="@string/drop_off"
        app:layout_constraintBottom_toTopOf="@+id/radioGroup_when"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <EditText
        android:id="@+id/editText_drop_off"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="13dp"
        android:layout_marginEnd="1dp"
        android:autofillHints=""
        android:ems="10"
        android:inputType="textPostalAddress"
        app:layout_constraintEnd_toEndOf="@+id/editText_pick_up"
        app:layout_constraintTop_toBottomOf="@+id/editText_pick_up" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="31dp"
        android:layout_marginBottom="37dp"
        android:text="When"
        app:layout_constraintBottom_toTopOf="@+id/textView6"
        app:layout_constraintStart_toStartOf="parent" />

    <RadioGroup

        android:id="@+id/radioGroup_when"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="1dp"
        android:layout_marginTop="12dp"
        android:layout_weight="10"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="@+id/editText_drop_off"
        app:layout_constraintTop_toBottomOf="@+id/editText_drop_off">


        <RadioButton
            android:id="@+id/rb_now"
            style="@style/pickRideRadioButtons"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="7dp"
            android:onClick="onClicked_pick_ride"
            android:text="Now"
            app:layout_constraintStart_toStartOf="@+id/editText_drop_off"
            app:layout_constraintTop_toBottomOf="@+id/editText_drop_off" />


        <RadioButton
            android:id="@+id/rb_set_a_time"
            style="@style/pickRideRadioButtons"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="7dp"
            android:onClick="onClicked_pick_ride"
            android:text="Set a time"
            app:layout_constraintEnd_toEndOf="@+id/editText_drop_off"
            app:layout_constraintTop_toBottomOf="@+id/editText_drop_off" />
    </RadioGroup>


    <RadioGroup

        android:id="@+id/radioGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginTop="9dp"
        android:layout_weight="10"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="@+id/editText_time"
        app:layout_constraintTop_toBottomOf="@+id/editText_time">


        <RadioButton
            android:id="@+id/rb_mini_cab"
            style="@style/pickRideRadioButtons"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="onClicked_pick_ride"
            android:text="@string/mini_cab"
            android:checked="true"
            />


        <RadioButton
            android:id="@+id/rb_mini_bus"
            style="@style/pickRideRadioButtons"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="onClicked_pick_ride"
            android:text="@string/mini_bus" />


        <RadioButton
            android:id="@+id/rb_limo"
            style="@style/pickRideRadioButtons"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="onClicked_pick_ride"
            android:text="@string/limo" />

        <RadioButton
            android:id="@+id/rb_sports"
            style="@style/pickRideRadioButtons"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="onClicked_pick_ride"
            android:text="@string/sports" />

    </RadioGroup>

    <TextView
        android:id="@+id/textView4"
        android:layout_width="0dp"
        android:layout_height="63dp"
        android:layout_marginStart="6dp"
        android:layout_marginTop="114dp"
        android:layout_marginEnd="6dp"
        android:layout_marginBottom="114dp"
        android:text="@string/pick_your_ride"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/editText_time"
        app:layout_constraintStart_toEndOf="@+id/textView7"
        app:layout_constraintTop_toBottomOf="@+id/textView6" />

    <Button
        android:id="@+id/button_make_booking"
        style="@style/button_large"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:text="@string/make_booking"
        android:textSize="25sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <EditText
        android:id="@+id/editText_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:inputType="date"
        app:layout_constraintStart_toStartOf="@+id/radioGroup_when"
        app:layout_constraintTop_toBottomOf="@+id/radioGroup_when" />

    <EditText
        android:id="@+id/editText_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="13dp"
        android:ems="10"
        android:inputType="time"
        app:layout_constraintStart_toStartOf="@+id/editText_date"
        app:layout_constraintTop_toBottomOf="@+id/editText_date" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="31dp"
        android:layout_marginTop="27dp"
        android:text="Date"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView6" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="29dp"
        android:text="Time"
        app:layout_constraintBottom_toBottomOf="@+id/editText_date"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/editText_date" />


</android.support.constraint.ConstraintLayout>