<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"

    xmlns:android="http://schemas.android.com/apk/res/android">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:orientation="vertical">

                <EditText
                    android:id="@+id/email"
                    style="@style/text_large"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="left|center"
                    android:hint="email" />

                <EditText
                    android:id="@+id/password"
                    style="@style/text_large"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="left"
                    android:layout_marginRight="16dp"
                    android:hint="@string/prompt_password" />


                <Button
                    android:id="@+id/login"
                    style="@style/button_large"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:text="Sign in" />


                <TextView
                    android:id="@+id/textView2"
                    style="@style/label_small"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:text="@string/if_you_have_an_account"
                    android:layout_marginBottom="23dp"
                    />


                <Button
                    android:id="@+id/registration"
                    style="@style/button_large"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:text="Register" />
                <TextView
                    style="@style/label_small"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:text="@string/if_you_dont_have_an_account" />

            </LinearLayout>

        </LinearLayout>
    </ScrollView>



</LinearLayout>
