<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"

    xmlns:android="http://schemas.android.com/apk/res/android">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">



            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView7"
                    style="@style/text_large"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginRight="16dp"
                    android:text="When" />

                <RadioGroup

                    android:id="@+id/radioGroup_when"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="10"
                    android:orientation="horizontal">


                    <RadioButton
                        android:id="@+id/rb_day"
                        style="@style/pickRideRadioButtons"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="4dp"
                        android:layout_marginTop="7dp"
                        android:checked="true"
                        android:onClick="onClicked_pick_time"
                        android:text="day" />


                    <RadioButton
                        android:id="@+id/rb_night"
                        style="@style/pickRideRadioButtons"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="16dp"
                        android:layout_marginTop="7dp"
                        android:onClick="onClicked_pick_time"
                        android:text="night" />
                </RadioGroup>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_margin="16dp"
                >

                <TextView
                    android:id="@+id/textView_pick_up_date"
                    style="@style/text_large"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Kilometers" />

                <EditText
                    android:id="@+id/editText_distance"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="16dp"
                    android:ems="10"
                    android:inputType="number" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_margin="16dp"
                >

                <TextView
                    android:id="@+id/textView4"
                    style="@style/text_large"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="16dp"
                    android:text="@string/pick_your_ride" />

                <RadioGroup

                    android:id="@+id/radioGroup"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="16dp"
                    android:layout_weight="10"
                    android:gravity="left|center"
                    android:orientation="vertical">


                    <RadioButton
                        android:id="@+id/rb_mini_cab"
                        style="@style/pickRideRadioButtons"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:checked="true"
                        android:onClick="onClicked_pick_ride"
                        android:text="@string/mini_cab" />


                    <RadioButton
                        android:id="@+id/rb_mini_bus"
                        style="@style/pickRideRadioButtons"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:onClick="onClicked_pick_ride"
                        android:text="@string/mini_bus" />


                    <RadioButton
                        android:id="@+id/rb_limo"
                        style="@style/pickRideRadioButtons"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:onClick="onClicked_pick_ride"
                        android:text="@string/limo" />

                    <RadioButton
                        android:id="@+id/rb_sports"
                        style="@style/pickRideRadioButtons"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:onClick="onClicked_pick_ride"
                        android:text="@string/sports" />

                </RadioGroup>

            </LinearLayout>

            <TextView
                android:id="@+id/textView_cost"
                style="@style/text_large"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:gravity="center"
                android:textColor="@color/red"
                android:textSize="30sp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1" />
            <Button
                android:id="@+id/button_calculate"
                style="@style/button_large"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Calculate" />



        </LinearLayout>
    </ScrollView>



</LinearLayout>